<resources>
    <string name="app_name">MotomoApp</string>
    <string name="logIn">Iniciar sesión</string>
    <string name="signIn">Crear cuenta</string>
    <string name="settings">Configuración</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="navigation_drawer_creditcard">Ver mis tarjetas</string>
    <string name="navigation_drawer_giftcard">Ver mis tarjetas de regalo</string>
    <string name="navigation_drawer_myorder">Ver mi orden</string>
    <string name="user">Usuario</string>
    <string name="passwordText">Contraseña</string>
    <string name="headerfoodcard">Header</string>
    <string name="descripcionfoodcard">Descripcion</string>
    <string name="preciofoodcard">Precio</string>
    <string name="boton_agregar">Agregar 1 al carrito</string>
    <string name="paymentMethodTitle">¿Qué medio de pago quieres utilizar?</string>
    <string name="debitcardTitle">Tarjeta de crédito / débito</string>
    <string name="giftcardTitle">Tarjeta de regalo</string>
    <string name="open_drawer">Mostrar opciones</string>
    <string name="close_drawer">Ocultar opciones</string>
    <string name="sign_up">Crear cuenta</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="selectPaymentMethod">¿Qué medio de pago quieres utilizar?</string>
    <string name="creditCardPayment">Pago con Tarjeta</string>
    <string name="continueOrder">Continuar con mi orden</string>
    <string name="giftCardPayment">Tarjeta de regalo</string>
    <string name="cashPayment">Efectivo</string>
    <string name="paymentDone">Pago realizado</string>
    <string name="orderDone">Hemos creado tu orden, en un momento te entregaremos tu pedido</string>
    <string name="ver_carrito">Ver carrito (1)</string>
    <string name="subtotal">Subtotal</string>
    <string name="cantidad">Cantidad</string>
    <string name="pagar">Pagar</string>
    <string name="total">Total:</string>
    <string name="title_activity_metodo_pago">MetodoPago</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="medio_pago_pregunta">¿Qué medio de pago quieres utilizar?</string>
    <string name="agregar">Agregar</string>
    <string name="registro_correcto">Se ha registrado el método de pago correctamente</string>
    <string name="continuar">Continuar</string>
    <string name="processingPayment">Procesando pago</string>
    <string name="newOrder">Hacer un nuevo pedido</string>
    <string name="myGifCards">Mis tarjetas de regalo</string>
    <string name="btnCard">Seleccionar</string>
    <string name="credit_card_title">Tarjeta de crédito</string>
    <string name="myCreditCards">Mis tarjetas de crédito</string>
    <string name="cashOrderDone">Una vez que realices tu pago se te entregará tu pedido, gracias</string>
    <string name="giftcard_title">Tarjeta de regalo</string>
    <string name="giftcardValue">500</string>
    <string name="order_completed">Has completado tu orden</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="homeDelivery">¿Desea que su pedido sea entregado en su domicilio?</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="main_channel">Notificaciones principales</string>
    <string name="courses_description">Notificaciones sobre tu pedido</string>
    <string name="main_description">Notificaciones sobre tu pedido</string>
    <string name="pedido_title">Pedido realizado</string>
    <string name="pedido_string">Tu pedido ha sido realizado y está siendo preparado</string>
    <string name="action_title">Pide ahora</string>
    <string name="action_body">Pulsa para hacer un nuevo pedido</string>
    <string name="button_title">Cerrar sesión</string>
    <string name="button_body">Terminaste con tu compra, ¿deseas cerrar sesión?</string>
    <string name="button_text">Sí</string>
    <string name="usuarioEmail">Correo electrónico</string>
</resources>
