<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.motomoapp.ui.home.GiftCardFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_creditcard" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.motomoapp.ui.gallery.CreditCardFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_giftcard" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.motomoapp.ui.slideshow.MyorderFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_myorder" />
</navigation>