<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity"
    >

    <include layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/selectPaymentMethodText"
        android:text="@string/selectPaymentMethod"
        android:textSize="24sp"
        style="@style/Title.H2"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/creditCardPaymentButton"
        android:text="@string/creditCardPayment"
        style="@style/ButtonWhiteBackground"
        android:drawableLeft="@drawable/credit_card"
        android:drawableTint="@color/colorPrimary"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectPaymentMethodText"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/giftCardPaymentButton"
        android:text="@string/giftCardPayment"
        style="@style/ButtonWhiteBackground"
        android:drawableLeft="@drawable/giftcard"
        android:drawableTint="@color/colorPrimary"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditCardPaymentButton"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cashPaymentButton"
        android:text="@string/cashPayment"
        style="@style/ButtonWhiteBackground"
        android:drawableLeft="@drawable/cash"
        android:drawableTint="@color/colorPrimary"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giftCardPaymentButton"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp"
        />

    <!--
    <com.google.android.material.button.MaterialButton
        android:id="@+id/acceptPaymentButton"
        android:text="@string/continueOrder"
        style="@style/ButtonFull"
        android:layout_height="0dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        app:headerLayout="@layout/drawer_header"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>

