<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="giftCard"
            type="com.example.motomoapp.models.entities.GiftCard" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/cardDisplay"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@drawable/cardbackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="6dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/item_number"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/giftcard_title"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.145"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/giftCardValue"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:text="@{giftCard.giftNumber}"
            tools:text="@string/giftcardValue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="@+id/cardDisplay"
            app:layout_constraintTop_toBottomOf="@+id/item_number"
            app:layout_constraintVertical_bias="0.106" />


        <Button
            android:id="@+id/select_gift_card"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="@string/btnCard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.745"
            app:layout_constraintStart_toEndOf="@+id/item_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.182" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/giftcard"
            app:layout_constraintBottom_toBottomOf="@+id/cardDisplay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.918"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/colorPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>